# BeyondMail

./: .gitignore  LICENCE  README.md  pyproject.toml
beyondmail/: __init__.py  host.py  mail.py
