[tool.poetry]
name = "beyondmail"
version = "0.1.2"
description = "Beyond Mail its an open source project made for sending emails easily with python."
authors = ["Davi Lucciola <davilucciola14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
